# Tax-Data-Assistant-Backend

./: .env.example  README.md  config.py  database.py  learning.txt  main.py  make_admin.py  migrate.py  portal_data.txt  pyproject.toml  setup_data.py  users.db
chroma_db/: chroma.sqlite3
data/: bot.db  content_manifest.json  metadata_schema.json  portal_data.txt
data/raw/company_info/: about.txt  contact.txt  fta_compliance.txt  home.txt  peppol.txt  services.txt
data/raw/qa_dataset/: faq_pairs.jsonl  faq_pairs.txt
data/raw/uae_tax_knowledge/: fta_einvoicing_clarifications.txt  fta_vat_awareness_guide.txt  fta_vat_guide.txt  mof_einvoicing_overview.txt
database/: bot.db  connections.py  conversations.py  feedback.py  init_db.py  models.py  users.py
database/chroma_db/: chroma.sqlite3
database/crud/: conversation.py  feedback.py  users.py
database_setup/: connections.py  init_db.py  models.py
database_setup/crud/: conversation.py  feedback.py  users.py
docs/: pipeline_structure.txt
groq_setup/: ingest.py  main.py
migrations/: migrate.py
routes/: admin.py  auth.py  chat.py  feedback.py
schemas/: auth.py  chat.py  chat_schema.py  error_schemas.py  feedback.py  feedback_schema.py  reg_schema.py
test/: test_pipeline.py
utils/: config.py  hasher.py  helpers.py  ingestor.py  pipeline.py  pipeline_structure.txt  rag.py  scraper.py  test_pipeline.py
utils/data_pipeline/: hasher.py  ingestor.py  pipeline.py  scraper.py
