[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "llama-index>=0.14.16",
    "llama-index-embeddings-jinaai>=0.6.0",
    "llama-index-llms-groq>=0.5.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
